# system-info-monitor

./: .prettierignore  LICENSE  README.md  package-lock.json  package.json  tailwind.config.js
src/: app.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: lib.rs  main.rs
src/apis/: sysinfo.ts
src/components/: cpu.tsx  index.ts  memory.tsx
src/contexts/: index.ts  setting-context.tsx
src/enums/: index.ts  item.ts
src/hooks/: index.ts  use-info.tsx  use-tray.tsx  use-window.tsx
